src/PyGEL/I3DTree.h

    I3DTree* I3DTree_new();
    void I3DTree_delete(I3DTree* self);
    void I3DTree_insert(I3DTree* tree, double x, double y, double z, size_t v);
    void I3DTree_build(I3DTree* tree);
    size_t I3DTree_closest_point(I3DTree* tree, double x, double y, double z, double r,
                                    CGLA::Vec3d* key, size_t* val);
    size_t I3DTree_in_sphere(I3DTree* tree, double x, double y, double z, double r,
                             Vec3dVector* keys, IntVector* vals);