src/PyGEL/IntVector.h

    IntVector* IntVector_new(size_t s);
    size_t IntVector_get(IntVector* self, size_t size_t);
    size_t IntVector_size(IntVector* self);
    void IntVector_delete(IntVector* self);